@@ -1,3 +1,7 @@
+2010-04-14  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-basic.el: Improve gud-break-or-remove and gud-enable-or-disable.
+
 2010-04-06  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-basic.el: Remove imenu bound(mouse3), use C-mouse3 instead.
